# Ai

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
AiCOre/: CMakeLists.txt
AiCOre/include/: AiCore.h
AiCOre/src/: AiCore.cpp
AiCore/: CMakeLists.txt
AiCore/include/: AiCore.h  Camera.h  Mesh.h  Object.h  Shader.h  Texture.h  painter.h
AiCore/src/: AiCore.cpp  Mesh.cpp  Object.cpp  Texture.cpp  painter.cpp
SayHello/: CMakeLists.txt  SayHello.cpp
SayHello/src/: SayHello.cpp
core/: CMakeLists.txt
core/src/: painter.cpp
dependencies/: CMakeLists.txt
dependencies/glad/: CMakeLists.txt
resources/models/azi/: azi.mtl
resources/shaders/: 01.basicShader.fs  01.basicShader.vs  02.lightingMap.fs
resources/shaders/Azibao/: GoochShading.fs  GoochShading.vs
resources/shaders/common/pure/: transparency.fs
resources/shaders/common/screen/: screenQuad.fs
resources/shaders/common/skybox/: skybox.fs
